--- a/form-no-js.html
+++ b/form-no-js.html
@@ -4,6 +4,90 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact Form</title>
+        <style>
+            * { box-sizing: border-box; }
+            
+            body {
+                font-family: sans-serif;
+                margin: 0;
+                padding: 0;
+            }
+            h1 {
+                text-align: center;
+                margin-top: 1rem;
+            }
+
+            form {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                max-width: 600px;
+                margin: 0 auto;
+                padding: 1rem;
+                border: 1px solid #ccc;
+                border-radius: 0.5rem;
+            }
+
+            fieldset {
+                display: flex;
+                flex-direction: column;
+                gap: 0.5rem;
+                border: none;
+                padding: 0;
+                margin: 0;
+            }
+
+            legend {
+                font-weight: bold;
+                font-size: 1.2rem;
+                margin-bottom: 0.5rem;
+            }
+
+            label {
+                display: block;
+            }
+
+            input[type="text"],
+            input[type="email"],
+            textarea {
+                font-family: sans-serif;
+                width: 100%;
+                padding: 0.5rem;
+                margin-bottom: 0.5rem;
+                border: 1px solid #ccc;
+                border-radius: 0.25rem;
+            }
+
+            output[id="error-message"],
+            output[id="info-message"] {
+                display: flex;
+                align-items: center;
+                font-size: 1.2rem;
+            }
+
+            output[id="error-message"] {
+                color: #dc2626;
+                font-weight: bold;
+            }
+
+            output[id="info-message"] {
+                color: green;
+            }
+
+            input[type="submit"] {
+                align-self: flex-start;
+                background-color: #007bff;
+                color: #fff;
+                padding: 0.5rem 1rem;
+                border: none;
+                border-radius: 0.25rem;
+                cursor: pointer;
+            }
+
+            input[type="submit"]:hover {
+                background-color: #0056b3;
+            }
+        </style>
     </head>
     <body>
         <h1>Contact Form</h1>
