--- a/form-no-js.html
+++ b/form-no-js.html
@@ -92,25 +92,30 @@
     <body>
         <h1>Contact Form</h1>
 
-        <form action="https://httpbin.org/post" method="post">
+        <form action="https://httpbin.org/post" method="post"> <!-- Do I need to set autocomplete="on" at the form level?-->
             <fieldset>
                 <legend>Your Details</legend>
 
                 <label for="name">Name:</label>
-                <input id="name" name="name" type="text" placeholder="John Smith" required autofocus>
+                <input id="name" name="name" type="text" placeholder="John Smith" autocomplete="name" required autofocus
+                minlength="2" maxlength="50" pattern="[A-ZÀ-ÖØ-öø-ÿ][A-Za-zÀ-ÖØ-öø-ÿ '\-]{1,49}"
+                title="Name must start with an uppercase letter and may include letters, spaces, hyphens, and apostrophes (2-50 characters)." aria-describedby="error-message info-message"> <!-- Should I be using aria-describedby here? Is title accessible? -->
 
-                <label for="email">Email:</label> <!-- Why isnt email autocompleting? -->
-                <input id="email" name="email" type="email" placeholder="jsmith@example.com" autocomplete="email" required>
+                <label for="email">Email:</label>
+                <input id="email" name="email" type="email" placeholder="jsmith@example.com" autocomplete="email" required
+                minlength="5" maxlength="100" title="Please enter a valid email address." aria-describedby="error-message info-message">
             </fieldset>
             <fieldset>
                 <legend>Message</legend>
 
                 <label for="subject">Subject:</label>
-                <input id="subject" name="subject" placeholder="What's this about?" type="text">
+                <input id="subject" name="subject" placeholder="What's this about?" type="text"
+                minlength="2" maxlength="100" pattern="[A-Za-zÀ-ÖØ-öø-ÿ0-9 .,!?'\-]{2,100}"
+                title="Subject may include letters, numbers, spaces, and basic punctuation." aria-describedby="error-message info-message">
 
                 <label for="comments">Your Comments:</label>
-                <textarea id="comments" name="comments" rows="5" placeholder="Tell us your thoughts!" required></textarea>
-                <!-- TODO: Textarea font should be same font as rest of text -->
+                <textarea id="comments" name="comments" rows="5" placeholder="Tell us your thoughts!" required
+                minlength="2" maxlength="1000" aria-describedby="error-message info-message"></textarea>
             </fieldset>
 
             <input name="possible_bot" value="true" type="hidden">
