--- a/form-no-js.html
+++ b/form-no-js.html
@@ -12,6 +12,7 @@
                 margin: 0;
                 padding: 0;
             }
+
             h1 {
                 text-align: center;
                 margin-top: 1rem;
@@ -47,9 +48,13 @@
                 display: block;
             }
 
-            input[type="text"],
-            input[type="email"],
-            textarea {
+            .optional-indicator {
+                font-size: 0.9rem;
+                font-style: italic;
+                color: #555;
+            }
+
+            input, textarea { /* I don't want the last one to have a margin bottom...? */
                 font-family: sans-serif;
                 width: 100%;
                 padding: 0.5rem;
@@ -58,12 +63,42 @@
                 border-radius: 0.25rem;
             }
 
+            input:focus,
+            textarea:focus {
+                outline: 2px solid #2563eb;
+                outline-offset: 2px;
+            }
+
+            input:user-invalid, textarea:user-invalid {
+                border-color: #dc2626;
+            }
+
+            input:required:valid, textarea:required:valid { /* Should this turn green as soon as valid, or after clicking away? */
+                border-color: green;
+            }
+
+            input:optional:not(:placeholder-shown):valid,
+            textarea:optional:not(:placeholder-shown):valid {
+                border-color: green;
+            }
+
+            #e8f0fe
+
             output[id="error-message"],
             output[id="info-message"] {
-                display: flex;
-                align-items: center;
-                font-size: 1.2rem;
+                display: block;
+                min-height: 1.2em;
+                margin-top: 0rem;
+                font-size: 0.9rem;
             }
+
+            form:has(input:user-invalid, textarea:user-invalid) #error-message::before {
+                content: "Please fix the highlighted fields before submitting.";
+            }
+
+            /* form:has(input:user-invalid, textarea:user-invalid) #info-message::before {
+                content: "Please review the highlighted fields.";
+            } */
 
             output[id="error-message"] {
                 color: #dc2626;
@@ -108,7 +143,7 @@
             <fieldset>
                 <legend>Message</legend>
 
-                <label for="subject">Subject:</label>
+                <label for="subject">Subject: <span class="optional-indicator">(optional)</span></label> <!-- better to insert content with CSS? -->
                 <input id="subject" name="subject" placeholder="What's this about?" type="text"
                 minlength="2" maxlength="100" pattern="[A-Za-zÀ-ÖØ-öø-ÿ0-9 .,!?'\-]{2,100}"
                 title="Subject may include letters, numbers, spaces, and basic punctuation." aria-describedby="error-message info-message">
@@ -120,8 +155,10 @@
 
             <input name="possible_bot" value="true" type="hidden">
 
-            <output id="error-message">Error Message if any</output>
-            <output id="info-message">Info Message if any</output>
+            <!-- <output id="error-message">Too many characters</output>
+            <output id="info-message">Please use letters or numbers</output> -->
+            <output id="error-message"></output>
+            <output id="info-message"></output>
 
             <input type="submit" value="Send Message">
         </form>
