Store theme preference in local storage and style form pages in line with resume site

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             </section>
             
         </footer>
+        <script src="assets/theme-toggle.js" defer></script>
         <!-- This obviously doesn't actually exist... -->
         <script>
             class KcHelloLog extends HTMLElement {
@@ -83,7 +84,7 @@
             // made with generative AI
         </script>
         <noscript>
-            <p>Analytics are disabled because JavaScript is turned off.</p>
+            <p class="no-js-warning">Analytics are disabled because JavaScript is turned off, and your theme preference will not be saved.</p>
         </noscript>
     </body>
 </html>
