--- a/projects.html
+++ b/projects.html
@@ -147,8 +147,12 @@
                 <small>&copy; KEVIN COHEN <br> Press Start to continue</small> <!-- <small> makes more sense than <p>? -->
             </section>
         </footer>
+        <script src="assets/theme-toggle.js" defer></script>
         <script>
             // i will add script here after writing body
         </script>
+        <noscript>
+            <p class="no-js-warning">Theme preference will not be saved without JavaScript. Toggle works per visit only.</p>
+        </noscript>
     </body>
 </html>
