--- a/contact-forms/form-with-js.html
+++ b/contact-forms/form-with-js.html
@@ -3,30 +3,39 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact Form</title>
+        <title>Contact Form (JS Enhanced)</title>
+        <link rel="icon" href="../assets/cv-favicon-16.png" sizes="16x16" type="image/png">
+        <link rel="icon" href="../assets/cv-favicon-32.png" sizes="32x32" type="image/png">
+        <link rel="stylesheet" href="../main.css">
         <style>
             * { box-sizing: border-box; }
-            
-            body {
-                font-family: sans-serif;
-                margin: 0;
-                padding: 0;
-            }
 
-            h1 {
-                text-align: center;
-                margin-top: 1rem;
-            }
-
-            form {
+            .contact-form-layout {
+                flex: 1;
+                width: min(720px, 92vw);
+                margin: 1rem auto 2rem;
+                padding: 1rem 1.25rem;
+                border: 3px solid var(--primary-text);
+                border-radius: 0;
+                background-color: color-mix(in srgb, var(--foreground) 85%, transparent);
                 display: flex;
                 flex-direction: column;
                 gap: 1rem;
-                max-width: 600px;
-                margin: 0 auto;
-                padding: 1rem;
-                border: 1px solid #ccc;
-                border-radius: 0.5rem;
+            }
+
+            .contact-form-layout h1 {
+                text-align: center;
+                margin: 0;
+            }
+
+            .contact-form-layout form {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                padding: 1rem 1.25rem;
+                border: 1px solid color-mix(in srgb, var(--primary-text) 75%, transparent);
+                border-radius: 0;
+                background-color: color-mix(in srgb, var(--foreground) 92%, transparent);
             }
 
             fieldset {
@@ -42,38 +51,45 @@
                 font-weight: bold;
                 font-size: 1.2rem;
                 margin-bottom: 0.5rem;
+                color: var(--primary-text);
             }
 
             label {
                 display: block;
+                color: var(--secondary-text);
             }
 
             .optional-indicator {
                 font-size: 0.9rem;
                 font-style: italic;
-                color: #555;
+                color: color-mix(in srgb, CanvasText 60%, var(--secondary-text));
             }
 
-            input, textarea { /* I don't want the last one to have a margin bottom...? */
-                font-family: sans-serif;
+            input,
+            textarea {
+                font-family: inherit;
                 width: 100%;
                 padding: 0.5rem;
                 margin-bottom: 0.5rem;
-                border: 1px solid #ccc;
-                border-radius: 0.25rem;
+                border: 1px solid color-mix(in srgb, var(--primary-text) 50%, CanvasText);
+                border-radius: 0;
+                background-color: Canvas;
+                color: CanvasText;
             }
 
             input:focus,
             textarea:focus {
-                outline: 2px solid #2563eb;
+                outline: 2px solid var(--secondary-text);
                 outline-offset: 2px;
             }
 
-            input:user-invalid, textarea:user-invalid {
+            input:user-invalid,
+            textarea:user-invalid {
                 border-color: #dc2626;
             }
 
-            input:required:valid, textarea:required:valid { /* Should this turn green as soon as valid, or after clicking away? */
+            input:required:valid,
+            textarea:required:valid {
                 border-color: green;
             }
 
@@ -96,21 +112,21 @@
             }
 
             output[id="info-message"] {
-                color: green;
+                color: var(--secondary-text);
             }
 
             input[type="submit"] {
                 align-self: flex-start;
-                background-color: #007bff;
-                color: #fff;
+                background-color: var(--primary-text);
+                color: var(--button-text);
                 padding: 0.5rem 1rem;
                 border: none;
-                border-radius: 0.25rem;
+                border-radius: 0;
                 cursor: pointer;
             }
 
             input[type="submit"]:hover {
-                background-color: #0056b3;
+                background-color: var(--secondary-text);
             }
 
             .flash-error {
@@ -133,6 +149,7 @@
             }
 
             #info-message.char-count-normal {
+                color: green;
                 font-weight: bold;
             }
 
@@ -148,42 +165,67 @@
         </style>
     </head>
     <body>
-        <h1>Contact Form</h1>
+        <header>
+            <hgroup class="brand">
+                <h2>Kevin Cohen</h2>
+                <p>&gt; Player One</p>
+            </hgroup>
 
-        <form action="https://httpbin.org/post" method="post"> <!-- Do I need to set autocomplete="on" at the form level?-->
-            <fieldset>
-                <legend>Your Details</legend>
+            <nav>
+                <ul>
+                    <li><a href="/index.html">HOME</a></li>
+                    <li><a href="/resume.html">ABOUT</a></li>
+                    <li><a href="/projects.html">PROJECTS</a></li>
+                    <li><a href="/blog.html">BLOG</a></li>
+                </ul>
+            </nav>
 
-                <label for="name">Name:</label>
-                <input id="name" name="name" type="text" placeholder="John Smith" autocomplete="name" required autofocus
-                minlength="2" maxlength="50" pattern="[A-ZÀ-ÖØ-öø-ÿ][A-Za-zÀ-ÖØ-öø-ÿ '\-]{1,49}"
-                title="Name must start with an uppercase letter and may include letters, spaces, hyphens, and apostrophes (2-50 characters)." aria-describedby="error-message info-message"> <!-- Should I be using aria-describedby here? Is title accessible? -->
+            <label class="theme-toggle" aria-label="Toggle between light and dark theme">
+                <input type="checkbox" name="color-scheme" aria-label="Dark mode toggle">
+                <span class="toggle-track">
+                    <span class="toggle-thumb"></span>
+                </span>
+            </label>
+        </header>
+        <main class="contact-form-layout">
+            <h1>Contact Form</h1>
 
-                <label for="email">Email:</label>
-                <input id="email" name="email" type="email" placeholder="jsmith@example.com" autocomplete="email" required
-                minlength="5" maxlength="100" title="Please enter a valid email address." aria-describedby="error-message info-message">
-            </fieldset>
-            <fieldset>
-                <legend>Message</legend>
+            <form action="https://httpbin.org/post" method="post">
+                <fieldset>
+                    <legend>Your Details</legend>
 
-                <label for="subject">Subject: <span class="optional-indicator">(optional)</span></label> <!-- better to insert content with CSS? -->
-                <input id="subject" name="subject" placeholder="What's this about?" type="text"
-                minlength="2" maxlength="100" pattern="[A-Za-zÀ-ÖØ-öø-ÿ0-9 .,!?'\-]{2,100}"
-                title="Subject may include letters, numbers, spaces, and basic punctuation." aria-describedby="error-message info-message">
+                    <label for="name">Name:</label>
+                    <input id="name" name="name" type="text" placeholder="John Smith" autocomplete="name" required autofocus
+                    minlength="2" maxlength="50" pattern="[A-ZÀ-ÖØ-öø-ÿ][A-Za-zÀ-ÖØ-öø-ÿ '\-]{1,49}"
+                    title="Name must start with an uppercase letter and may include letters, spaces, hyphens, and apostrophes (2-50 characters)." aria-describedby="error-message info-message">
 
-                <label for="comments">Your Comments:</label>
-                <textarea id="comments" name="comments" rows="5" placeholder="Tell us your thoughts!" required
-                minlength="2" maxlength="1000" aria-describedby="error-message info-message"></textarea>
-            </fieldset>
+                    <label for="email">Email:</label>
+                    <input id="email" name="email" type="email" placeholder="jsmith@example.com" autocomplete="email" required
+                    minlength="5" maxlength="100" title="Please enter a valid email address." aria-describedby="error-message info-message">
+                </fieldset>
+                <fieldset>
+                    <legend>Message</legend>
 
-            <input name="possible_bot" value="true" type="hidden">
-            <input name="form-errors" id="form-errors" type="hidden">
+                    <label for="subject">Subject: <span class="optional-indicator">(optional)</span></label>
+                    <input id="subject" name="subject" placeholder="What's this about?" type="text"
+                    minlength="2" maxlength="100" pattern="[A-Za-zÀ-ÖØ-öø-ÿ0-9 .,!?'\-]{2,100}"
+                    title="Subject may include letters, numbers, spaces, and basic punctuation." aria-describedby="error-message info-message">
 
-            <output id="info-message"></output>
-            <output id="error-message"></output>
-            
-            <input type="submit" value="Send Message">
-        </form>
+                    <label for="comments">Your Comments:</label>
+                    <textarea id="comments" name="comments" rows="5" placeholder="Tell us your thoughts!" required
+                    minlength="2" maxlength="1000" aria-describedby="error-message info-message"></textarea>
+                </fieldset>
+
+                <input name="possible_bot" value="true" type="hidden">
+                <input name="form-errors" id="form-errors" type="hidden">
+
+                <output id="info-message"></output>
+                <output id="error-message"></output>
+
+                <input type="submit" value="Send Message">
+            </form>
+        </main>
+        <script src="../assets/theme-toggle.js" defer></script>
         <script>
             document.addEventListener('DOMContentLoaded', () => {
                 const form = document.querySelector('form');
@@ -444,5 +486,8 @@
 
             });
         </script>
+        <noscript>
+            <p class="no-js-warning">Theme preference will not be saved without JavaScript. Some helper interactions on this form also require it.</p>
+        </noscript>
     </body>
 </html>
