Noscript fallback text for project cards

--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,10 @@
             <section aria-label="Projects">
                 <p class="section-intro">Project cards are rendered with a custom element so the layout stays consistent across this portfolio.</p>
                 <ul class="projects-grid" id="projects-grid"></ul>
+                <noscript>
+                    <p>To see projects, please ensure JavaScript is enabled</p>
+                    <p>How to handle fallback for custom components when JS disabled??</p>
+                </noscript>
             </section>
             <aside>More levels coming soon...</aside>
         </main>
