--- a/projects.html
+++ b/projects.html
@@ -53,10 +53,17 @@
                 <p>Choose a project to explore</p>
             </hgroup>
             <section aria-label="Projects">
-                <p class="section-intro">Project cards are rendered with a custom element so the layout stays consistent across this portfolio.</p>
+                <section class="projects-actions" aria-label="Project data sources">
+                    <ul>
+                        <li><button type="button" id="load-local">Load Local</button></li>
+                        <li><button type="button" id="load-remote">Load Remote</button></li>
+                    </ul>
+                    <p id="projects-status" role="status" aria-live="polite">Choose a source to load projects.</p>
+                </section>
+                <p class="projects-empty" id="projects-empty" hidden>No projects loaded yet. Use the buttons above.</p>
                 <ul class="projects-grid" id="projects-grid"></ul>
                 <noscript>
-                    <p>To see projects, please ensure JavaScript is enabled</p>
+                    <p>To see projects, please ensure JavaScript is enabled.</p>
                     <p>How to handle fallback for custom components when JS disabled??</p>
                 </noscript>
             </section>
