Add project management page for CRUD functionality

--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,7 @@
                     <ul>
                         <li><button type="button" id="load-local">Load Local</button></li>
                         <li><button type="button" id="load-remote">Load Remote</button></li>
+                        <li><a href="/manage-projects.html" role="button">Manage Projects</a></li>
                     </ul>
                     <p id="projects-status" role="status" aria-live="polite">Choose a source to load projects.</p>
                 </section>
