Add confirmation message to bottom of project crud form - confirmation message at top of form wasn't visible when pressing submit, needed clear feedback

--- a/manage-projects.html
+++ b/manage-projects.html
@@ -101,6 +101,8 @@
                         <button type="submit" id="submit-btn">Create Project</button>
                         <button type="reset" id="reset-btn">Clear Form</button>
                     </div>
+
+                    <output id="form-confirmation" aria-live="polite"></output>
                 </form>
             </section>
             <aside><a href="/projects.html">← Back to Projects</a></aside>
